--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                         	</div>
                             <h1>Promote your app efficiently!</h1>
                             <div class="description">
-                            	Noise cancelling headphones you can use at the Gym. Listen to 4 Hours of music on 1 charge. Stylish and Exceptional - Boomea.
+                            	Noise cancelling headphones, perfect for the Gym. 
+                              Listen to 4 Hours of music on 1 charge. 
+                              Stylish and Exceptional - Boomea.
                             </div>
                             <div class="top-download">
                             	<a class="btn big-link-1" href="#">Add to Cart</a>
