--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<a class="scroll-link" href="#features">Features</a>
 			<a class="scroll-link" href="#screenshots">Screenshots</a>
 			<a class="scroll-link" href="#video">Video</a>
-			<a class="scroll-link" href="#call-to-action">Download</a>
+			<a class="scroll-link" href="#call-to-action">Buy</a>
 			<a class="scroll-link" href="#about-us">About</a>
 			<a class="scroll-link" href="#contact">Contact</a>
 			<div class="hide-menu">
@@ -70,9 +70,9 @@
                         </div>
                         <div class="col-sm-7 text wow fadeInUp">
                         	<div class="logo">
-                        		<a href="">Boomea - Wireless Bluetooth Headphones</a>
+                        		<a href="">Boomea</a>
                         	</div>
-                            <h1>Promote your app efficiently!</h1>
+                            <h1>Wireless Bluetooth Headphones</h1>
                             <div class="description">
                             	Noise cancelling headphones, perfect for the Gym. 
                               Listen to 4 Hours of music on 1 charge. 
@@ -211,7 +211,7 @@
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 call-to-action section-description wow fadeIn">
-	                    <h2>Download it now</h2>
+	                    <h2>Buy it now</h2>
 	                    <p>
 	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
 	                    	labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
@@ -221,7 +221,7 @@
 	            <div class="row">
 	            	<div class="col-sm-12 call-to-action-buttons wow fadeInUp">
 	                    <div class="call-to-action-download">
-                            <a class="btn big-link-3" href="#">Download it</a>
+                            <a class="btn big-link-3" href="#">Buy it</a>
                             <a class="btn big-link-4 scroll-link" href="#features">Take a look</a>
                         </div>
                         <div class="call-to-action-download-small">
