--- a/index.html
+++ b/index.html
@@ -368,26 +368,12 @@
                         This form is the best way to reach out to our team.</p>
 	                </div>
 	            </div>
-	            <div class="row">
-	                <div class="col-sm-12 contact-form wow fadeInUp">
-	                    <form role="form" action="assets/contact.php" method="post">
-	                    	<div class="form-group">
-	                    		<label class="sr-only" for="contact-email">Email</label>
-	                        	<input type="text" name="email" placeholder="Email..." class="contact-email form-control" id="contact-email">
-	                        </div>
-	                        <div class="form-group">
-	                        	<label class="sr-only" for="contact-subject">Subject</label>
-	                        	<input type="text" name="subject" placeholder="Subject..." class="contact-subject form-control" id="contact-subject">
-	                        </div>
-	                        <div class="form-group">
-	                        	<label class="sr-only" for="contact-message">Message</label>
-	                        	<textarea name="message" placeholder="Message..." class="contact-message form-control" id="contact-message"></textarea>
-	                        </div>
-	                        <button type="submit" class="btn">Send message</button>
-	                    </form>
-	                </div>
-	            </div>
-	        </div>
+              <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                  <iframe src="/form.html" height="450px" width="100%" border="0" frameBorder="0"></iframe>
+                </div>
+              </div>
+	            
         </div>
 
         <!-- Footer -->
