working mailchimp signup

--- a/index.html
+++ b/index.html
@@ -341,15 +341,18 @@
                     <div class="section-description-icon"><i class="fa fa-envelope-o"></i></div>
                       <h2>Get Email Updates</h2>
                       <p>Sign up now and get 10% off your next order:</p>
-                      <form class="form-inline" role="form" action="assets/subscribe.php" method="post">
-                        <div class="form-group">
-                          <label class="sr-only" for="subscribe-email">Email address</label>
-                            <input type="text" name="email" placeholder="Enter your email..." class="subscribe-email form-control" id="subscribe-email">
-                          </div>
-                          <button type="submit" class="btn">Subscribe</button>
-                      </form>
-                      <div class="success-message"></div>
-                      <div class="error-message"></div>
+    <!-- Begin MailChimp Signup Form -->
+    <form action="//skyrealre.us4.list-manage.com/subscribe/post-json?u=6a3147af4a728cbf0f33925f6&id=752a548144" method="get" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-inline newsletter-form validate" target="_blank" novalidate>
+        <div class="form-group" id="mc_embed_signup_scroll">
+          <label class="sr-only"  for="mce-EMAIL">Subscribe to our mailing list</label>
+          <input type="text" value="" name="EMAIL" class="subscribe-email form-control email" id="mce-EMAIL" placeholder="Write your email address here" required>
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;"><input type="text" name="b_6a3147af4a728cbf0f33925f6_752a548144" tabindex="-1" value=""></div>
+          <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="button btn">Subscribe</button>
+          <h3 id="subscribe-result"></h3>
+        </div>
+    </form>
+    <!--End mc_embed_signup-->
                   </div>
               </div>
           </div>
