--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         	<div class="logo">
                         		<a href="">Boomea</a>
                         	</div>
-                            <h1>Wireless Bluetooth Headphones</h1>
+                            <h1>The Leader in Wireless Bluetooth Headphones</h1>
                             <div class="description">
                             	Noise cancelling headphones, perfect for the Gym. 
                               Listen to 4 Hours of music on 1 charge. 
