--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
 	                <div class="col-sm-12 screenshots section-description wow fadeIn">
 	                    <h2>Take a closer look</h2>
 	                    <p>
-	                    	Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut 
-	                    	aliquip ex ea commodo consequat. Ut wisi enim ad minim veniam, quis nostrud.
+	                    	Boomea has a lot to offer.
 	                    </p>
 	                </div>
 	            </div>
