--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         	</div>
                             <h1>The Leader in Wireless Bluetooth Headphones</h1>
                             <div class="description">
-                            	Noise cancelling headphones, perfect for the Gym. 
+                            	Noise cancelling headphones, perfect for the Gym or everyday life. 
                               Listen to 4 Hours of music on 1 charge. 
                               Stylish and Exceptional - Boomea.
                             </div>
