--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <h1>The Leader in Wireless Bluetooth Headphones</h1>
                             <div class="description">
                             	Noise cancelling headphones, perfect for the Gym or everyday life. 
-                              Listen to 4 Hours of music on 1 charge. 
+                              Listen to over 4 Hours of music on 1 charge. 
                               Stylish and Exceptional - Boomea.
                             </div>
                             <div class="top-download">
