change up images

--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
 	                </div>
 	            </div>
 	            <div class="row">
-	            	<div class="col-sm-5 screenshots-box wow fadeInLeft">
-	                    <img class="screenshot-img-active" src="assets/img/screenshots/1.jpg" alt="" data-at2x="assets/img/screenshots/1.jpg">
-	                    <img src="assets/img/screenshots/2.jpg" alt="" data-at2x="assets/img/screenshots/2.jpg">
-	                    <img src="assets/img/screenshots/3.jpg" alt="" data-at2x="assets/img/screenshots/3.jpg">
+	            	<div class="col-sm-6 screenshots-box wow fadeInLeft">
+	                    <img class="screenshot-img-active" src="assets/img/screenshots/boomea_logo.png" alt="" data-at2x="assets/img/screenshots/boomea_logo.png">
+	                    <img src="assets/img/screenshots/white_headphones.jpg.jpg" alt="" data-at2x="assets/img/screenshots/white_headphones.jpg">
+	                    <img src="assets/img/screenshots/white_and_black_headphones.jpg" alt="" data-at2x="assets/img/screenshots/white_and_black_headphones.jpg">
 	                    <div class="screenshots-nav"></div>
 	                </div>
-	                <div class="col-sm-7 screenshots-box wow fadeInUp">
+	                <div class="col-sm-6 screenshots-box wow fadeInUp">
 	                    <div class="screenshots-box-text">
 	                    	<div class="screenshots-box-text-icon"><i class="fa fa-headphones"></i></div>
 	                    	<h3>Listen to Music</h3>
