change up images

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 	            <div class="row">
 	            	<div class="col-sm-6 screenshots-box wow fadeInLeft">
 	                    <img class="screenshot-img-active" src="assets/img/screenshots/boomea_logo.png" alt="" data-at2x="assets/img/screenshots/boomea_logo.png">
-	                    <img src="assets/img/screenshots/white_headphones.jpg.jpg" alt="" data-at2x="assets/img/screenshots/white_headphones.jpg">
+	                    <img src="assets/img/screenshots/white_headphones.jpg" alt="" data-at2x="assets/img/screenshots/white_headphones.jpg">
 	                    <img src="assets/img/screenshots/white_and_black_headphones.jpg" alt="" data-at2x="assets/img/screenshots/white_and_black_headphones.jpg">
 	                    <div class="screenshots-nav"></div>
 	                </div>
