--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                               Stylish and Exceptional - Boomea.
                             </div>
                             <div class="top-download">
-                            	<a class="btn big-link-1" href="#"><i class="fa fa-amazon"></i>  Buy on Amazon.com</a>
+                            	<a class="btn big-link-1" href="http://www.amazon.com/dp/B015OFQ072"><i class="fa fa-amazon"></i>  Buy on Amazon.com</a>
                             	<a class="btn big-link-2 scroll-link" href="#features">Learn More</a>
                             </div>
                             <!-- 
@@ -218,7 +218,7 @@
 	            <div class="row">
 	            	<div class="col-sm-12 call-to-action-buttons wow fadeInUp">
 	                    <div class="call-to-action-download">
-                            <a class="btn big-link-3" href="#"><i class="fa fa-amazon"></i> Buy on Amazon</a>
+                            <a class="btn big-link-3" href="http://www.amazon.com/dp/B015OFQ072"><i class="fa fa-amazon"></i> Buy on Amazon</a>
                             <a class="btn big-link-4 scroll-link" href="#features">Take a look</a>
                         </div>
                         <div class="call-to-action-download-small">
