--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
 	            <div class="row">
 	            	<div class="col-sm-12 wow fadeInUp">
 	            		<div class="video-box">
-		                    <div class="embed-responsive embed-responsive-16by9">
+		                    <!-- <div class="embed-responsive embed-responsive-16by9">
 		                    	<iframe class="embed-responsive-item" src="//player.vimeo.com/video/84910153?title=0&amp;byline=0&amp;portrait=0&amp;badge=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		                    </div>
-	                    </div>
+	                    </div> -->
 	                </div>
 	            </div>
 	        </div>
