--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<a class="scroll-link" href="#top-content">Top</a>
 			<a class="scroll-link" href="#features">Benefits</a>
 			<a class="scroll-link" href="#screenshots">Photos</a>
-			<a class="scroll-link" href="#video">Video</a>
+			<a class="scroll-link" href="#video">Tech Tips</a>
 			<a class="scroll-link" href="#call-to-action"><i class="fa fa-amazon"></i> Buy</a>
 			<a class="scroll-link" href="#about-us">About</a>
 			<a class="scroll-link" href="#contact">Contact</a>
@@ -205,6 +205,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <!-- Video -->
         <div class="video-container section-container">
           <div class="container">
+          <!-- 
             <div class="row">
               <div class="col-sm-12 video section-description wow fadeIn">
                 <h2>Watch the video</h2>
@@ -221,7 +222,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
               </div>
             </div>
-          
+           -->
             <div class="row">
                 <div class="col-sm-12 about-us section-description wow fadeIn">
                     <h2>Usage Tips</h2>
