--- a/index.html
+++ b/index.html
@@ -547,10 +547,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	                <div class="col-sm-12 contact section-description wow fadeIn">
 	                	<div class="section-description-icon"><i class="fa fa-paper-plane-o"></i></div>
 	                    <h2>Contact us</h2>
-	                    <p>
+	                    <!-- 
+                      <p>
 	                    	We welcome all feedback. <br>
                         Get help with your headphones. Get answers about returns or refunds. <br>
-                        This form is the best way to reach out to our team.</p>
+                        This form is the best way to reach out to our team.
+                      </p>
+                       -->
 	                </div>
 	            </div>
               <div class="row">
